made some changes

--- a/presentation-template.html
+++ b/presentation-template.html
@@ -41,14 +41,14 @@
 
       <article class="nobackground">
         <h1>
-          [Your Project Name]
+          MoMAC
           <br>
-          [It can have a second line]
+          Medium of Martial Arts Comparissions
         </h1>
         <p>
-          [Your Name]
+          Daniel Cossins
           <br>
-          March 13th, 2014
+          October 6, 2015
         </p>
       </article>
       
@@ -58,13 +58,13 @@
         </h3>
         <ul>
           <li>
-            You should pull this from your elevator pitch
+            Build a fully functional angular app from scratch
           </li>
           <li>
-            Aim for a few bullet points
+            Have users be able to contribute and vote
           </li>
           <li>
-            Lipsum.
+            Learn
           </li>
         </ul>
       </article>
@@ -84,7 +84,7 @@
         </h3>
         <ul>
           <li>
-            You get the drill.
+            Make it user friendly from the start
           </li>
           <li>
             Aim for a few bullet points
@@ -106,10 +106,10 @@
         </p>
         <ul>
           <li>
-            <a href='http://www.google.com'>myemail@example.com</a>
+            <a href=''>daniel.cossins@yahoo.com</a>
           </li>
           <li>
-            <a href='http://www.google.com'>github.com/myprojecturl</a>
+            <a href='https://github.com/danielcossins11/MA-compare---NSS-capstone'>MoMAC</a>
           </li>
         </ul>
       </article>
