modified the demo

--- a/presentation-template.html
+++ b/presentation-template.html
@@ -43,6 +43,7 @@
         <h1>
           MoMAC
           <br>
+          <br>
           Medium of Martial Arts Comparissions
         </h1>
         <p>
@@ -58,13 +59,13 @@
         </h3>
         <ul>
           <li>
-            Build a fully functional angular app from scratch
+            Build a fully functional angular website from scratch
           </li>
           <li>
             Have users be able to contribute and vote
           </li>
           <li>
-            Learn
+            Create a modern environment that allows martial artists to share their knowlege, and users to easily view the information and media.
           </li>
         </ul>
       </article>
@@ -87,10 +88,10 @@
             Make it user friendly from the start
           </li>
           <li>
-            Aim for a few bullet points
+            Make it look good from the start
           </li>
           <li>
-            Lipsum.
+            Show it to someone you know
           </li>
         </ul>
       </article>
